feat: added routes PUT and Delete in Philosopher